# discordBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ballBot/: ball.py  ballCog.py
dayBot/: day.py  dayCog.py
fbBot/: directVideoBot.py  fbCog.py
imageBot/: imageBot.py  imageCog.py
pokeBot/: pokeBot.py  pokeCog.py  pokeEmbed.py  pokeObj.py  pokemon.txt
pokeBot/scripts/: downloadPokemonImages.py  generatePokemonList.py
spyBot/: locaisEpapeis.py  partidaSpy.py  spyCog.py
voiceBot/: voiceCog.py
waifuBot/: waifuBot.py  waifuCog.py
wikiuBot/: teste.py  wikiuCog.py
